index file changes done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<p>dnes54</p>
+	<p style="vertical-align: middle;">dnes54</p>
+	<p style="vertical-align: middle;">nabin</p>
+
 </body>
 </html>
