--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<p style="vertical-align: middle;">dnes54</p>
-	<p style="vertical-align: middle;">nabin</p>
+	<p>dnes54</p>
 
 </body>
 </html>
