--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<p style="position: absolute; top:50%; left: 50%; margin: auto;">dnes54</p>
+	<p style="position: absolute; top:50%; left: 50%;"><a href="https://linktr.ee/dnes54" target="_blank">dnes54</a></p>
 </body>
 </html>
