Color changed with hover effects

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>dnes</title>
+	<title>dnes54</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<style>
+	a {
+		text-decoration: none;
+		color: #053161;
+		font-weight: 600;
+		font-family: Arial, Helvetica, sans-serif;
+	}
+	
+	a:hover{
+		color: #FF6A34;
+	}
+	body{
+		background-color: #BED9DA;
+	}
+</style>
 <body>
 	<p style="position: absolute; top:50%; left: 50%;"><a href="https://linktr.ee/dnes54" target="_blank">dnes54</a></p>
 </body>
