changed text and view

--- a/index.html
+++ b/index.html
@@ -9,19 +9,30 @@
 	a {
 		text-decoration: none;
 		color: #053161;
-		font-weight: 600;
+		font-weight: 700;
 		font-family: Arial, Helvetica, sans-serif;
-		font-size: 13px;
+		font-size: 12px;
 	}
 	
 	a:hover{
 		color: #FF6A34;
 	}
+
+
 	body{
 		background-color: #BED9DA;
 	}
+
+	p{
+		margin: 0;
+		width: 100%;
+    	height: 100vh;
+    	justify-content: center;
+    	align-items: center;
+    	display: flex;
+		}
 </style>
 <body>
-	<p style="position: absolute; top:50%; left: 50%;"><a href="https://linktr.ee/dnes54" target="_blank">dnes54</a></p>
+	<p><a href="https://linktr.ee/dnes54" target="_blank">DINESH SHRESTHA</a></p>
 </body>
 </html>
