--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Dinesh Shrestha</title>
-	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
