--- a/index.html
+++ b/index.html
@@ -3,37 +3,11 @@
 <head>
 	<title>Dinesh Shrestha</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<style>
-	a {
-		text-decoration: none;
-		color: #053161;
-		font-weight: 700;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 12px;
-	}
-	
-	a:hover{
-		color: #FF6A34;
-	}
-
-
-	body{
-		background-color: #BED9DA;
-	}
-
-	p{
-		margin: 0;
-		width: 100%;
-    	height: 100vh;
-    	justify-content: center;
-    	align-items: center;
-    	display: flex;
-		}
-</style>
 <body>
-	<p><a href="https://linktr.ee/dnes54" target="_blank">DINESH SHRESTHA</a></p>
+	<p><a class="hover-glitch" href="https://linktr.ee/dnes54" target="_blank">DINESH SHRESTHA</a></p>
 </body>
 </html>
