New Screen Removed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<p><a class="hover-glitch" href="https://linktr.ee/dnes54" target="_blank">DINESH SHRESTHA</a></p>
+	<p><a class="hover-glitch" href="https://linktr.ee/dnes54">DINESH SHRESTHA</a></p>
 </body>
 </html>
