meta keywords added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Dinesh Shrestha</title>
+	<title>Dinesh Shrestha - Product UI UX Designer</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="Dinesh Shrestha, dinesh shrestha, dinesh, dineshshrestha, dines, dnes, dns, dnes54, shrestha, stha, sresta, ds, d s, dnes shrestha, dnes stha, dinesh sresta, dinesh stha">
+	
+
 </head>
 <body>
 	<p><a class="hover-glitch" href="https://linktr.ee/dnes54">DINESH SHRESTHA</a></p>
