--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Dinesh Shrestha - Product UI UX Designer</title>
-	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-	<link rel="stylesheet" href="style.css">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="Dinesh Shrestha, dinesh shrestha, dinesh, dineshshrestha, dines, dnes, dns, dnes54, shrestha, stha, sresta, ds, d s, dnes shrestha, dnes stha, dinesh sresta, dinesh stha">
-	
-
-</head>
-<body>
-	<p><a class="hover-glitch" href="https://linktr.ee/dnes54">DINESH SHRESTHA</a></p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <title>Page</title>
+  </head>
+  <body>
+    <main>
+      <section>
+        <h1 class="title">DINESH</h1>
+        <h1 class="title">SHRESTHA</h1>
+      </section>
+      <footer>
+        <article class="left-section">
+          <p>Currently at Evolve</p>
+          <p>
+            <span class="block mb-8">dribble.com/dnes</span>
+            <span class="block">9841763458</span>
+          </p>
+        </article>
+        <article class="right-section">
+          <p>/ 2024</p>
+        </article>
+      </footer>
+    </main>
+  </body>
 </html>
