Responsive Text Added

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       </section>
       <footer>
         <article class="left-section">
-          <p>Currently at Evolve</p>
+          <p>Currently at evolve</p>
           <p>
             <span class="block mb-8">dribble.com/dnes</span>
             <span class="block">9841763458</span>
           </p>
         </article>
         <article class="right-section">
-          <p>/ 2024</p>
+          <p>/2024</p>
         </article>
       </footer>
     </main>
