--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <article class="left-section">
           <p>Currently at Evolve</p>
           <p>
-            <span class="block mb-8 hover-glitch"><a href="https://linktr.ee/dnes54">linktr.ee/dnes54</a></span>
+            <span class="block mb-8 hover-glitch"><a href="https://linktr.ee/dnes54">@dnes54</a></span>
             <span class="block">9841763458</span>
           </p>
         </article>
