Telephone Hyperlink Added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p>Currently at Evolve</p>
           <p>
             <span class="block mb-8 hover-glitch"><a href="https://linktr.ee/dnes54">@dnes54</a></span>
-            <span class="block">+9779841763458</span>
+            <span class="block"><a href="tel:+9779841763458">+9779841763458</a></span>
           </p>
         </article>
         <article class="right-section">
